--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="logo"><h1 class="animate__animated animate__heartBeat ">Mera Bharat</h1></div>
             <div class="menu">
                 <a href="#">home</a>
-                <a href="#">gallery</a>
+                <a href="https://www.bing.com/images/search?view=detailV2&ccid=J8JuDRth&id=CF37AFA13BB47C485E17AA3B6ED54BBB407B378F&thid=OIP.J8JuDRthHRN9TzipVwgv7AHaE8&mediaurl=https%3a%2f%2fwww.oyorooms.com%2fblog%2fwp-content%2fuploads%2f2017%2f10%2fFeature-Image-min-14.jpg&exph=720&expw=1080&q=india+famous+places+photos&simid=608000613145579517&FORM=IRPRST&ck=64D5B800B9AC381C5E59C6B238705AE7&selectedIndex=32">gallery</a>
                 <a href="#">about</a>
-                <a href="#">contact</a>
+                <a href="https://youtu.be/efoWGacTVcM">contact</a>
             </div>
             </nav>
             <main>
